deployments/pathweb/zigbee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-network
spec:
  selector: {}
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      nodeSelector:
        location: rfhome
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:latest
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
