deployments/pathweb/zigbee2mqtt/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee2mqtt
  namespace: home-network
spec:
  selector: {}
  serviceName: zigbee2mqtt
  replicas: 1
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: pathweb-worker-pi4-01
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:latest
          # image: ghcr.io/ruifung/zigbee2mqtt:20230805
          securityContext:
            privileged: true
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: serial
              mountPath: /dev/ttyAMA0
          # resources:
          #   limits:
          #     squat.ai/serial-pi-ama0: "1"
          #     squat.ai/serial-pi-s0: "1"
      volumes:
        - name: serial
          hostPath:
            path: /dev/ttyAMA0
            type: CharDevice
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: ceph-rbd-retain
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
