deployments/pathweb/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  labels:
    external-dns: local-pdns
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: z2m-2.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zigbee2mqtt
            port:
              name: http
  tls:
  - hosts:
    - z2m-2.services.home.yrf.me
    secretName: services-wildcard-cert
